Task16_DataTable_Excel
Build the datatable and write in the Excel

--- a/SourceCode/2024/March2024/Abishek/Task15_concate_Firstname_LastName/Main.xaml
+++ b/SourceCode/2024/March2024/Abishek/Task15_concate_Firstname_LastName/Main.xaml
@@ -91,7 +91,12 @@
       <AssemblyReference>System.Runtime.Numerics</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence sap2010:Annotation.AnnotationText="Task15:&#xD;&#xA;Step 1: Read the data from workbook&#xD;&#xA;Step 2: Retreive the values from for-each&#xD;&#xA;Step 3: Concatenate the all Names&#xD;&#xA;Step 4: Write the data into Excel&#xD;&#xA;" DisplayName="ConcatenateNames" sap:VirtualizedContainerService.HintSize="592,1117.3333333333333" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <sap:WorkflowViewStateService.ViewState>
+    <scg:Dictionary x:TypeArguments="x:String, x:Object">
+      <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
+    </scg:Dictionary>
+  </sap:WorkflowViewStateService.ViewState>
+  <Sequence sap2010:Annotation.AnnotationText="Task15:&#xD;&#xA;Step 1: Read the data from Excel&#xD;&#xA;Step 2: For each condition to retreive all the values&#xD;&#xA;Step 3: Concatenate all the Names&#xD;&#xA;Step 4: Write into Excel by using write cell workbook&#xD;&#xA;" DisplayName="ConcatenateNames" sap:VirtualizedContainerService.HintSize="592,1117.3333333333333" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="sd:DataTable" Name="res_allvalues" />
       <Variable x:TypeArguments="x:Int32" Name="cellid" />
