Task17_GenerateDataTable_From_TextFile
Add the data by using multiple Assign Activity (Initialize the row and add the data to rows)

--- a/SourceCode/2024/March2024/Abishek/Task19_ExtractDT_Text/Main.xaml
+++ b/SourceCode/2024/March2024/Abishek/Task19_ExtractDT_Text/Main.xaml
@@ -104,13 +104,14 @@
       <AssemblyReference>UiPath.System.Activities.Design</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="512,1028" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence sap2010:Annotation.AnnotationText="Task19:&#xD;&#xA;Step 1:&#xD;&#xA;Extract the Data Table from Website&#xD;&#xA;Step 2:&#xD;&#xA;Convert Data Table data type into String Data Type&#xD;&#xA;Step 3:&#xD;&#xA;Write into Text file" DisplayName="ExtractDB_Text" sap:VirtualizedContainerService.HintSize="512,1156.6666666666667" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="sd:DataTable" Default="[New System.Data.DataTable]" Name="ExtractDataTable" />
     </Sequence.Variables>
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+        <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
     <uix:NApplicationCard AttachMode="ByInstance" DisplayName="Use Application/Browser" sap:VirtualizedContainerService.HintSize="450,940" sap2010:WorkflowViewState.IdRef="NApplicationCard_1" InteractionMode="DebuggerApi" ScopeGuid="c169402b-d9b2-4d57-b949-24859f9d9342" Version="V2">
